--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Register/Index.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Register/Index.cshtml
@@ -10,86 +10,108 @@
 <!-- Head -->
 <head>
 
-	<title>Replay Bank - Yeni Kullanici Kaydi</title>
+    <title>Replay Bank - Yeni Kullanici Kaydi</title>
 
-	<!-- Meta-Tags -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="keywords" content="Existing Login Form Widget Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design">
-	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-	<!-- //Meta-Tags -->
+    <!-- Meta-Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="keywords" content="Existing Login Form Widget Responsive, Login Form Web Template, Flat Pricing Tables, Flat Drop-Downs, Sign-Up Web Templates, Flat Web Templates, Login Sign-up Responsive Web Template, Smartphone Compatible Web Template, Free Web Designs for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design">
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!-- //Meta-Tags -->
 
-	<link href="~/register/~/register/css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="~/register/~/register/css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
 
-	<!-- Style -->
-	<link rel="stylesheet" href="~/register/css/style.css" type="text/css" media="all">
+    <!-- Style -->
+    <link rel="stylesheet" href="~/register/css/style.css" type="text/css" media="all">
 
-	<!-- Fonts -->
-	<link href="//fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-	<!-- //Fonts -->
+    <!-- Fonts -->
+    <link href="//fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
+    <!-- //Fonts -->
 
 </head>
 <!-- //Head -->
 <!-- Body -->
 <body>
 
-	<h1>Replay Bank Kayit Formu</h1>
+    <h1>Replay Bank Kayit Formu</h1>
 
-	<div class="w3layoutscontaineragileits">
-		<h2>Yeni Musteri Kaydi</h2>
-		<form  method="post">
-			<input type="text" asp-for="Name" placeholder="Adiniz " required="">
-			<input type="text" asp-for="Surname" placeholder="Soyadiniz" required="">
-			<input type="text" asp-for="Username" placeholder="Kullanici Adiniz" required="">
-			<input type="email" asp-for="Email" placeholder="Mail Adresiniz" required="">
-			<input type="password" asp-for="Password" placeholder="Sifre" required="">
-			<input type="password" asp-for="ConfirmPassword" placeholder="Sifre Tekrar" required="">
-			<ul class="agileinfotickwthree  ">
-				<li>
-					<input type="checkbox" id="brand1" value="" class="col-3">
+    <div class="w3layoutscontaineragileits">
+        <h2>Yeni Musteri Kaydi</h2>
+        
+            <input type="text" asp-for="Name" placeholder="Adiniz " required="">
+            <input type="text" asp-for="Surname" placeholder="Soyadiniz" required="">
+            <input type="text" asp-for="Username" placeholder="Kullanici Adiniz" required="">
+            <input type="email" asp-for="Email" placeholder="Mail Adresiniz" required="">
+            <input type="password" asp-for="Password" placeholder="Sifre" required="">
+            <input type="password" asp-for="ConfirmPassword" placeholder="Sifre Tekrar" required="">
+            <ul class="agileinfotickwthree  ">
+                <li>
+                    <input type="checkbox" id="brand1" value="" class="col-3">
 
-					<label for="brand2" class="col-9"><span></span><a>Kullanici Sozlesmesini Okudum.</a></label>
-					@*<a href="#">Kullanici Sozlesmesini Okudum.</a>*@
-				</li>
-			</ul>
-			<div class="aitssendbuttonw3ls">
-				@Html.ValidationSummary()
-				<input type="submit" value="Kayit Ol">
-				<p> Hesabin Var Mi? <span>→</span> <a class="w3_play_icon1" href="#small-dialog1"> Giris Yap</a></p>
-				<div class="clear"></div>
-			</div>
-			
-		</form>
-	</div>
-
-	
-
-	<div class="w3footeragile">
-		<p> &copy; @DateTime.Now.Year Replay Bank Grisi paneli All Rights Reserved</p>
-	</div>
+                    <label for="brand2" class="col-9"><span></span><a class="w3_play_icon1" id="eee" ">Kullanici Sozlesmesini Okudum.</a></label>
+                    @*<a href="#">Kullanici Sozlesmesini Okudum.</a>*@
+                </li>
+            </ul>
+            <div class="aitssendbuttonw3ls">
+                @Html.ValidationSummary()
+                <input type="submit" value="Kayit Ol">
+                <p> Hesabin Var Mi? <span>→</span> <a class="w3_play_icon1"> Giris Yap</a></p>
+                <div class="clear"></div>
+            </div>
+     
 
 
-	<script type="text/javascript" src="~/register/js/jquery-2.1.4.min.js"></script>
 
-	<!-- pop-up-box-js-file -->
-	<script src="~/register/js/jquery.magnific-popup.js" type="text/javascript"></script>
-	<!--//pop-up-box-js-file -->
-	<script>
-		$(document).ready(function() {
-		$('.w3_play_icon,.w3_play_icon1,.w3_play_icon2').magnificPopup({
-			type: 'inline',
-			fixedContentPos: false,
-			fixedBgPos: true,
-			overflowY: 'auto',
-			closeBtnInside: true,
-			preloader: false,
-			midClick: true,
-			removalDelay: 300,
-			mainClass: 'my-mfp-zoom-in'
-		});
+    </div>
 
-		});
-	</script>
+
+
+    <div class="w3footeragile">
+        <p> &copy; @DateTime.Now.Year Replay Bank Grisi paneli All Rights Reserved</p>
+    </div>
+
+
+    <script type="text/javascript" src="~/register/js/jquery-2.1.4.min.js"></script>
+
+    <!-- pop-up-box-js-file -->
+    <script src="~/register/js/jquery.magnific-popup.js" type="text/javascript"></script>
+    <!--//pop-up-box-js-file -->
+    <!-- for register popup -->
+    <div id="small-dialog1" class="mfp-hide" hidden="hidden">
+        <div class="contact-form1">
+            <div class="contact-w3-agileits">
+                                                                  
+
+                <div id="sozlesme" title="Kullanici Sozlesmesi">
+                    <p>
+                        Bu bölüm açıklama kısmını içermektedir. Açıklamalarınızı buraya yazabilirsiniz.
+                    </p>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- //for register popup -->
+    <script>
+        $(document).ready(function () {
+            $('.w3_play_icon,.w3_play_icon1,.w3_play_icon2').magnificPopup({
+                type: 'inline',
+                fixedContentPos: false,
+                fixedBgPos: true,
+                overflowY: 'auto',
+                closeBtnInside: true,
+                preloader: false,
+                midClick: true,
+                removalDelay: 300,
+                mainClass: 'my-mfp-zoom-in'
+            });
+
+        });
+
+
+    </script>
+
 
 </body>
 <!-- //Body -->
