--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Login/Index.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Login/Index.cshtml
@@ -43,7 +43,7 @@
 			<input type="password" asp-for="Password" placeholder="Sifre" required="">
 			<ul class="agileinfotickwthree">
 				<li>
-					<input type="checkbox" id="brand12" value="" asp-for="RememberMe">
+					<input type="checkbox" id="brand12" value="@Model.RememberMe" asp-for="RememberMe">
 					<label for="brand1"><span></span>Beni Hatirla</label>
 					<a href="#">Sifreni Mi Unuttun?</a>
 				</li>
