--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿ <footer>
           <div class="pull-right">
-            Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+            Repay_Bank -  Admin Template by @DateTime.Now.Year -Tum haklari saklidir.-
           </div>
           <div class="clearfix"></div>
         </footer>
