--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/MyProfile/Index.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/MyProfile/Index.cshtml
@@ -23,7 +23,7 @@
           <div class="">
             <div class="page-title">
               <div class="title_left">
-               @*@RenderBody()*@
+               @RenderBody()
               </div>
             </div>
           </div>
