--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutNavbarPartial/Default.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutNavbarPartial/Default.cshtml
@@ -17,11 +17,11 @@
                         <li>
                             <a href="javascript:;">
                                 <span class="badge bg-red pull-right">50%</span>
-                                <span>Settings</span>
+                                <span>Ayarlar</span>
                             </a>
                         </li>
                         <li><a href="javascript:;">Help</a></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                        <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Cikis Yap</a></li>
                     </ul>
                 </li>
 
@@ -35,7 +35,7 @@
                             <a>
                                 <span class="image"><img src="~/gentela-gh-pages/production/images/img.jpg" alt="Profile Image" /></span>
                                 <span>
-                                    <span>John Smith</span>
+                                    <span>Mustreri_adi</span>
                                     <span class="time">3 mins ago</span>
                                 </span>
                                 <span class="message">
@@ -82,7 +82,7 @@
                         <li>
                             <div class="text-center">
                                 <a>
-                                    <strong>See All Alerts</strong>
+                                    <strong>Tum Bildirimleri Gor</strong>
                                     <i class="fa fa-angle-right"></i>
                                 </a>
                             </div>
