--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
@@ -13,8 +13,8 @@
                 <img src="~/gentela-gh-pages/production/images/img.jpg" alt="..." class="img-circle profile_img">
             </div>
             <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Hos Geldiniz,</span>
+                <h2>musteri_ad</h2>
             </div>
         </div>
         <!-- /menu profile quick info -->
@@ -24,63 +24,65 @@
         <!-- sidebar menu -->
         <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
             <div class="menu_section">
-                <h3>General</h3>
+                <h3>Menuler</h3>
                 <ul class="nav side-menu">
                     <li>
-                        <a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-home"></i> Ana Sayfa <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
                             <li><a href="index.html">Dashboard</a></li>
-                            <li><a href="index2.html">Dashboard2</a></li>
-                            <li><a href="index3.html">Dashboard3</a></li>
+                           
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-edit"></i> Hesap Islemleri <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="form.html">General Form</a></li>
-                            <li><a href="form_advanced.html">Advanced Components</a></li>
-                            <li><a href="form_validation.html">Form Validation</a></li>
-                            <li><a href="form_wizards.html">Form Wizard</a></li>
-                            <li><a href="form_upload.html">Form Upload</a></li>
-                            <li><a href="form_buttons.html">Form Buttons</a></li>
+                            <li><a href="form.html">Para Trasferi</a></li>
+                            <li><a href="form_advanced.html">Son Islemlerim </a></li>
+                            <li><a href="form_validation.html">QR Ile Para Gonder </a></li>
+                            <li><a href="form_wizards.html">Iban Bilgisi Paylas </a></li>
+                            <li><a href="form_upload.html">Hesaplarim Arasi Transfer</a></li>
+                            <li><a href="form_buttons.html">Cebe Havale</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-desktop"></i> Hesaplarim <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="general_elements.html">General Elements</a></li>
-                            <li><a href="media_gallery.html">Media Gallery</a></li>
-                            <li><a href="typography.html">Typography</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="glyphicons.html">Glyphicons</a></li>
-                            <li><a href="widgets.html">Widgets</a></li>
-                            <li><a href="invoice.html">Invoice</a></li>
-                            <li><a href="inbox.html">Inbox</a></li>
-                            <li><a href="calendar.html">Calendar</a></li>
+                            <li><a href="general_elements.html">Tum Hesaplarim</a></li>
+                            <li><a href="media_gallery.html">Yeni Hesap Ac</a></li>
+                            <li><a href="typography.html">Vadesiz Hesaplarim</a></li>
+                            <li><a href="icons.html">Vadeli Hesaplarim</a></li>
+                            <li><a href="glyphicons.html">Altin Hesaplarim</a></li>
+                            <li><a href="widgets.html">Kredi Hesaplarim</a></li>
+                            <li><a href="invoice.html">Dolar Hesaplarim</a></li>
+                            <li><a href="inbox.html">Euro Hesaplarim</a></li>
+                           
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-table"></i> Odemeler <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="tables.html">Tables</a></li>
-                            <li><a href="tables_dynamic.html">Table Dynamic</a></li>
+                            <li><a href="tables.html">Fatura Odeme</a></li>
+                            <li><a href="tables_dynamic.html">Egitim Odemeleri</a></li>
+                            <li><a href="tables_dynamic.html">Trafik Odemeleri</a></li>
+                            <li><a href="tables_dynamic.html">Sinav Odemeleri</a></li>
+                            <li><a href="tables_dynamic.html">Sigorta Odemeleri</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-bar-chart-o"></i> Doviz Ve Altin <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="chartjs.html">Chart JS</a></li>
-                            <li><a href="chartjs2.html">Chart JS2</a></li>
-                            <li><a href="morisjs.html">Moris JS</a></li>
-                            <li><a href="echarts.html">ECharts</a></li>
-                            <li><a href="other_charts.html">Other Charts</a></li>
+                            <li><a href="chartjs.html">Doviz Kurlari</a></li>
+                            <li><a href="chartjs.html">Doviz Islemleri</a></li>
+                            <li><a href="chartjs.html">Altin Islemleri</a></li>
+                           
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-clone"></i>Krediler <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                            <li><a href="fixed_footer.html">Fixed Footer</a></li>
+                            <li><a href="fixed_sidebar.html">Kredi Hesaplarim</a></li>
+                            <li><a href="fixed_sidebar.html">Kredi Basvurularim</a></li>
+                            <li><a href="fixed_sidebar.html">Kredi Odemeleri</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -89,50 +91,25 @@
                 <h3>Live On</h3>
                 <ul class="nav side-menu">
                     <li>
-                        <a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-cc-mastercard"></i> Kartlarim <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="e_commerce.html">E-commerce</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="project_detail.html">Project Detail</a></li>
-                            <li><a href="contacts.html">Contacts</a></li>
-                            <li><a href="profile.html">Profile</a></li>
+                            <li><a href="e_commerce.html">Kredi Kartlarim</a></li>
+                            <li><a href="e_commerce.html">Banka Kartlarim</a></li>
+                            <li><a href="e_commerce.html">Sanal Kartlarim</a></li>
+                           
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-adjust"></i> Ayarlar <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="page_403.html">403 Error</a></li>
-                            <li><a href="page_404.html">404 Error</a></li>
-                            <li><a href="page_500.html">500 Error</a></li>
-                            <li><a href="plain_page.html">Plain Page</a></li>
-                            <li><a href="login.html">Login Page</a></li>
-                            <li><a href="pricing_tables.html">Pricing Tables</a></li>
+                            <li><a href="page_403.html">Sifre Degistir</a></li>
+                            <li><a href="page_404.html">Profil Bilgileri</a></li>
+                            <li><a href="page_404.html">Iletisim Bilgileri</a></li>
+                           
                         </ul>
                     </li>
-                    <li>
-                        <a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu">
-                            <li><a href="#level1_1">Level One</a>
-                            <li>
-                                <a>Level One<span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li class="sub_menu">
-                                        <a href="level2.html">Level Two</a>
-                                    </li>
-                                    <li>
-                                        <a href="#level2_1">Level Two</a>
-                                    </li>
-                                    <li>
-                                        <a href="#level2_2">Level Two</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#level1_2">Level One</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
+                 
+                    <li><a href="javascript:void(0)"><i class="fa fa-sign-out"></i> Cikis Yap </a></li>
                 </ul>
             </div>
 
