--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Register/Index.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Register/Index.cshtml
@@ -45,6 +45,7 @@
             <input type="text" asp-for="Surname" placeholder="Soyadiniz" required="">
             <input type="text" asp-for="Username" placeholder="Kullanici Adiniz" required="">
             <input type="email" asp-for="Email" placeholder="Mail Adresiniz" required="">
+            <input type="number" asp-for="PhoneNumber" placeholder="Telefon Numaraniz" required="">
             <input type="password" asp-for="Password" placeholder="Sifre" required="">
             <input type="password" asp-for="ConfirmPassword" placeholder="Sifre Tekrar" required="">
             <ul class="agileinfotickwthree  ">
