--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/_ViewImports.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Repay_Bank.PresentationLayer
 @using Repay_Bank.PresentationLayer.Models
 @using Repay_Bank.DTO.DTOS.AppUserDtos
+@using Repay_Bank.EntityLayer.Concrete
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
