--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
@@ -36,7 +36,7 @@
                     <li>
                         <a><i class="fa fa-edit"></i> Hesap Islemleri <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="form.html">Para Trasferi</a></li>
+                            <li><a href="/SendMoney/Index/">Para Trasferi</a></li>
                             <li><a href="form_advanced.html">Son Islemlerim </a></li>
                             <li><a href="form_validation.html">QR Ile Para Gonder </a></li>
                             <li><a href="form_wizards.html">Iban Bilgisi Paylas </a></li>
