--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
@@ -59,6 +59,18 @@
                         </ul>
                     </li>
                     <li>
+                        <a><i class="fa fa-trademark"></i> Para Trasferleri <span class="fa fa-chevron-down"></span></a>
+                        <ul class="nav child_menu">
+                            <li><a href="general_elements.html">TL Transfer</a></li>
+                            <li><a href="media_gallery.html">Dolar Transfer</a></li>
+                            <li><a href="typography.html">Euro Transfer</a></li>
+                            <li><a href="icons.html">Diger Transfer</a></li>
+                            
+                            
+
+                        </ul>
+                    </li>
+                    <li>
                         <a><i class="fa fa-table"></i> Odemeler <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
                             <li><a href="tables.html">Fatura Odeme</a></li>
