--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
@@ -29,18 +29,18 @@
                     <li>
                         <a><i class="fa fa-home"></i> Ana Sayfa <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="index.html">Dashboard</a></li>
+                            <li><a href="/Exchange/Index/">Sayfam</a></li>
                            
                         </ul>
                     </li>
                     <li>
                         <a><i class="fa fa-edit"></i> Hesap Islemleri <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="/SendMoney/Index/">Para Trasferi</a></li>
+                           
                             <li><a href="form_advanced.html">Son Islemlerim </a></li>
                             <li><a href="form_validation.html">QR Ile Para Gonder </a></li>
                             <li><a href="form_wizards.html">Iban Bilgisi Paylas </a></li>
-                            <li><a href="form_upload.html">Hesaplarim Arasi Transfer</a></li>
+                       
                             <li><a href="form_buttons.html">Cebe Havale</a></li>
                         </ul>
                     </li>
@@ -61,10 +61,10 @@
                     <li>
                         <a><i class="fa fa-trademark"></i> Para Trasferleri <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="general_elements.html">TL Transfer</a></li>
-                            <li><a href="media_gallery.html">Dolar Transfer</a></li>
-                            <li><a href="typography.html">Euro Transfer</a></li>
-                            <li><a href="icons.html">Diger Transfer</a></li>
+                            <li><a asp-controller="SendMoney" asp-action="Index" asp-route-mycurrency="TL">TL Transfer</a></li>
+                            <li><a asp-controller="SendMoney" asp-action="Index" asp-route-mycurrency="USD">Dolar Transfer</a></li>
+                            <li><a asp-controller="SendMoney" asp-action="Index" asp-route-mycurrency="EUR">Euro Transfer</a></li>
+                            <li><a asp-controller="SendMoney" asp-action="Index" asp-route-mycurrency="OTHER">Diger Transfer</a></li>
                             
                             
 
