--- a/Repay_Bank/Repay_Bank.PresentationLayer/Views/_ViewImports.cshtml
+++ b/Repay_Bank/Repay_Bank.PresentationLayer/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @using Repay_Bank.PresentationLayer.Models
 @using Repay_Bank.DTO.DTOS.AppUserDtos
 @using Repay_Bank.DTO.DTOS.CustomerAccountProcessDtos
+@using Repay_Bank.DTO.DTOS.CurrencyExchange
 @using Repay_Bank.EntityLayer.Concrete
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
